--- a/package.json
+++ b/package.json
@@ -36,8 +36,16 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "lodash": "^4.5.1",
+    "capitalize": "^1.0.0",
+    "lodash.capitalize": "^4.1.1",
+    "lodash.intersection": "^4.1.0",
+    "lodash.keys": "^4.0.4",
+    "lodash.map": "^4.2.0",
+    "lodash.omit": "^4.1.0",
+    "lodash.uppercase": "^4.1.0",
+    "lodash.zipobject": "^4.1.2",
     "react-redux": "^4.4.0",
-    "redux": "^3.3.1"
+    "redux": "^3.3.1",
+    "uppercase": "^0.1.1"
   }
 }
