--- a/package.json
+++ b/package.json
@@ -38,10 +38,14 @@
   "dependencies": {
     "capitalize": "^1.0.0",
     "lodash.capitalize": "^4.1.1",
+    "lodash.filter": "^4.2.1",
     "lodash.intersection": "^4.1.0",
     "lodash.keys": "^4.0.4",
     "lodash.map": "^4.2.0",
+    "lodash.mapvalues": "^4.2.0",
     "lodash.omit": "^4.1.0",
+    "lodash.pickby": "^4.2.1",
+    "lodash.remove": "^4.2.0",
     "lodash.uppercase": "^4.1.0",
     "lodash.zipobject": "^4.1.2",
     "react-redux": "^4.4.0",
